[package]
name = "pg_async"
version = "0.3.7"
authors = ["Artem <artemciy@gmail.com>"]
links = "pq"
build = "build.rs"
description = "Asynchronous, HA (master-master) PostgreSQL driver on top of libpq"
documentation = "https://docs.rs/pg_async/"
repository = "https://github.com/ArtemGr/pg_async.rs"
keywords = ["sql", "database", "postgres", "futures", "high-availability"]
license = "MIT"

[lib]
name = "pg_async"
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false 

[dependencies]
futures = "0.1"
gstuff = "0.2"
itertools = "0.5"
lazy_static = "0.2"
libc = "0.2"
nix = "0.7"
serde_json = "0.8"

[build-dependencies]

[[example]]
name = "24x7"
path = "examples/24x7.rs"

[dev-dependencies]
fomat-macros = "0.2"
futures-cpupool = "0.1"
rand = "0.3"
