[package]
name = "pg_async"
version = "0.8.6"
authors = ["Artem <artemciy@gmail.com>"]
links = "pq"
build = "build.rs"
description = "Asynchronous, HA (master-master) PostgreSQL driver on top of libpq"
documentation = "https://docs.rs/pg_async/"
repository = "https://github.com/ArtemGr/pg_async.rs"
keywords = ["sql", "database", "postgres", "futures", "high-availability"]
# https://crates.io/category_slugs
categories = ["asynchronous", "database"]
license = "MIT"

[lib]
name = "pg_async"
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false 

[dependencies]
atomic = "0.4"
chrono = "0.4"
futures = "0.1"
gstuff = "0.5"
inlinable_string = "0.1"
itertools = "0.8"
lazy_static = "1"
libc = "0.2"
nix = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"

[build-dependencies]

[[example]]
name = "24x7"
path = "examples/24x7.rs"

[dev-dependencies]
fomat-macros = "0.2"
futures-cpupool = "0.1"
rand = "0.3"
